--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Venda Placa - Nvidea</title>
+    <title>Livaria/Café</title>
+    <link rel="Stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
- <h1> Placa de Video - Nvidea 4070</h1>   
+    <h1>Menu</h1>
+    <li> <a href="link01.html">Link 01</a></li>
+    <li> <a href="link02.html">Link 02</a></li>
+    <li> <a href="link03.html">Link 03</a></li>
+    <li> <a href="link04.html">Link 04</a></li>
+    <li> <a href="link05.html">Link 05</a></li>
 </body>
 </html>
