--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="Stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <img src="logo.png">
     <h1>Menu</h1>
     <li> <a href="link01.html">Link 01</a></li>
     <li> <a href="link02.html">Link 02</a></li>
