--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Livaria/Café</title>
+    <title>Livaria & Café</title>
     <link rel="Stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <img src="logo.png">
+    <img src="logo.jpg">
     <h1>Menu</h1>
-    <li> <a href="link01.html">Link 01</a></li>
-    <li> <a href="link02.html">Link 02</a></li>
-    <li> <a href="link03.html">Link 03</a></li>
-    <li> <a href="link04.html">Link 04</a></li>
-    <li> <a href="link05.html">Link 05</a></li>
+    <li> <a href="Catalogo.html">Catalogo</a></li>
+    <li> <a href="Cardapio.html">Cardapio</a></li>
+    <li> <a href="cadastro.html">Cadastro</a></li>
+    <li> <a href="nossahistoria.html">Nossa Historia</a></li>
+    <li> <a href="faleconosco.html">Fale Conosco</a></li>
+    <li> <a href="index.html">Inicio</a></li>
 </body>
 </html>
